--- a/data/mcus_nxp_freescale.json
+++ b/data/mcus_nxp_freescale.json
@@ -174,6 +174,7 @@
     "company_id": "3",
     "name": "OMAPL137-(OMAPL137DZKBT3)",
     "core": "ARM926EJ-S + C28x DSP",
+    "is_dsp": 1,
     "core_mark": 35,
     "dsp_core": 1,
     "fpu": 1,
@@ -208,6 +209,7 @@
     "company_id": "3",
     "name": "OMAPL138EZWTA3",
     "core": "ARM926EJ-S + C28x DSP",
+    "is_dsp": 1,
     "core_mark": 35,
     "dsp_core": 1,
     "fpu": 1,
