--- a/data/mcus_xilinx_amd.json
+++ b/data/mcus_xilinx_amd.json
@@ -1,77 +1,78 @@
 [
- {
-  "id": "100",
-  "company_id": "13",
-  "name": "XA7Z020-1CLG484Q (FPGA)",
-  "core": "FPGA (Artix-7)",
-  "core_mark": 200,
-  "dsp_core": 1,
-  "fpu": 0,
-  "max_clock_mhz": 450.0,
-  "flash_kb": 0,
-  "sram_kb": 0,
-  "eeprom": 0,
-  "gpios": 200,
-  "uarts": 0,
-  "spis": 0,
-  "i2cs": 0,
-  "pwms": 0,
-  "timers": 0,
-  "dacs": 0,
-  "adcs": 0,
-  "cans": 0,
-  "power_mgmt": 1,
-  "clock_mgmt": 1,
-  "qei": 0,
-  "internal_osc": 0,
-  "security_features": 1,
-  "output_compare": 0,
-  "input_capture": 0,
-  "qspi": 0,
-  "ethernet": 0,
-  "emif": 0,
-  "spi_slave": 0,
-  "ext_interrupts": 0
-},
   {
-  "id": "101",
-  "company_id": "13",
-  "name": "XC7A200T-2FBG6761 (FPGA)",
-  "core": "FPGA (Artix-7)",
-  "core_mark": 300,
-  "dsp_core": 1,
-  "fpu": 0,
-  "max_clock_mhz": 500.0,
-  "flash_kb": 0,
-  "sram_kb": 0,
-  "eeprom": 0,
-  "gpios": 300,
-  "uarts": 0,
-  "spis": 0,
-  "i2cs": 0,
-  "pwms": 0,
-  "timers": 0,
-  "dacs": 0,
-  "adcs": 0,
-  "cans": 0,
-  "power_mgmt": 1,
-  "clock_mgmt": 1,
-  "qei": 0,
-  "internal_osc": 0,
-  "security_features": 1,
-  "output_compare": 0,
-  "input_capture": 0,
-  "qspi": 0,
-  "ethernet": 0,
-  "emif": 0,
-  "spi_slave": 0,
-  "ext_interrupts": 0
-},
+    "id": 100,
+    "company_id": 13,
+    "name": "XA7Z020-1CLG484Q (FPGA)",
+    "core": "FPGA (Artix-7)",
+    "core_mark": 200,
+    "dsp_core": 1,
+    "fpu": 0,
+    "max_clock_mhz": 450.0,
+    "flash_kb": 0,
+    "sram_kb": 0,
+    "eeprom": 0,
+    "gpios": 200,
+    "uarts": 0,
+    "spis": 0,
+    "i2cs": 0,
+    "pwms": 0,
+    "timers": 0,
+    "dacs": 0,
+    "adcs": 0,
+    "cans": 0,
+    "power_mgmt": 1,
+    "clock_mgmt": 1,
+    "qei": 0,
+    "internal_osc": 0,
+    "security_features": 1,
+    "output_compare": 0,
+    "input_capture": 0,
+    "qspi": 0,
+    "ethernet": 0,
+    "emif": 0,
+    "spi_slave": 0,
+    "ext_interrupts": 0
+  },
   {
-    "id": "102",
-    "company_id": "13",
+    "id": 101,
+    "company_id": 13,
+    "name": "XC7A200T-2FBG6761 (FPGA)",
+    "core": "FPGA (Artix-7)",
+    "core_mark": 300,
+    "dsp_core": 1,
+    "fpu": 0,
+    "max_clock_mhz": 500.0,
+    "flash_kb": 0,
+    "sram_kb": 0,
+    "eeprom": 0,
+    "gpios": 300,
+    "uarts": 0,
+    "spis": 0,
+    "i2cs": 0,
+    "pwms": 0,
+    "timers": 0,
+    "dacs": 0,
+    "adcs": 0,
+    "cans": 0,
+    "power_mgmt": 1,
+    "clock_mgmt": 1,
+    "qei": 0,
+    "internal_osc": 0,
+    "security_features": 1,
+    "output_compare": 0,
+    "input_capture": 0,
+    "qspi": 0,
+    "ethernet": 0,
+    "emif": 0,
+    "spi_slave": 0,
+    "ext_interrupts": 0
+  },
+  {
+    "id": 102,
+    "company_id": 13,
     "name": "XC7Z010-1CLG4001 (Xilinx FPGA)",
     "core": "Zynq-7000 SoC (ARM + FPGA)",
+    "is_fpga": 1,
     "core_mark": 250,
     "dsp_core": 1,
     "fpu": 1,
@@ -100,13 +101,13 @@
     "emif": 0,
     "spi_slave": 0,
     "ext_interrupts": 0
-  
   },
   {
-    "id": "103",
-    "company_id": "13",
+    "id": 103,
+    "company_id": 13,
     "name": "XCZU15EG",
     "core": "Zynq UltraScale+ MPSoC",
+    "is_fpga": 1,
     "core_mark": 500,
     "dsp_core": 1,
     "fpu": 2,
@@ -137,10 +138,11 @@
     "ext_interrupts": 0
   },
   {
-    "id": "104",
-    "company_id": "13",
+    "id": 104,
+    "company_id": 13,
     "name": "ZCU106",
     "core": "Zynq UltraScale+ MPSoC",
+    "is_fpga": 1,
     "core_mark": 480,
     "dsp_core": 1,
     "fpu": 2,
@@ -171,8 +173,8 @@
     "ext_interrupts": 0
   },
   {
-    "id": "105",
-    "company_id": "13",
+    "id": 105,
+    "company_id": 13,
     "name": "ZYNQ ZC706 (FPGA)",
     "core": "Zynq-7000 SoC (ARM + FPGA)",
     "core_mark": 300,
@@ -205,8 +207,8 @@
     "ext_interrupts": 0
   },
   {
-    "id": "106",
-    "company_id": "13",
+    "id": 106,
+    "company_id": 13,
     "name": "ZYNQ(XC7Z030) Xilinx FPGA",
     "core": "Zynq-7000 SoC (ARM + FPGA)",
     "core_mark": 320,
@@ -238,17 +240,17 @@
     "spi_slave": 0,
     "ext_interrupts": 0
   },
-   {
-    "id": "108",
-    "company_id": "13",
-    "name": "Antix-7 (XCA200T)",
+  {
+    "id": 108,
+    "company_id": 13,
+    "name": "Artix-7 (XCA200T)",
     "core": "FPGA (Artix-7)",
     "core_mark": 300,
     "dsp_core": 1,
     "fpu": 0,
-    "max_clock_mhz": 500.0,
-    "flash_kb": 0,
-    "sram_kb": 0,
+    "max_clock_mhz": "500.0",
+    "flash_kb": "",
+    "sram_kb": "",
     "eeprom": 0,
     "gpios": 300,
     "uarts": 0,
@@ -271,42 +273,39 @@
     "emif": 0,
     "spi_slave": 0,
     "ext_interrupts": 0
-
   },
   {
-  "id": "113",
-  "company_id": "13",
-  "name": "ZYNQ-7035",
-  "core": "Dual-core ARM Cortex-A9 + FPGA (Artix-7 class)",
-  "core_mark": 7500,
-  "dsp_core": 1,
-  "fpu": 1,
-  "max_clock_mhz": 1000,
-  "flash_kb": 0,
-  "sram_kb": 512,
-  "eeprom": 0,
-  "gpios": 54,
-  "uarts": 2,
-  "spis": 2,
-  "i2cs": 2,
-  "pwms": 0,
-  "timers": 4,
-  "dacs": 0,
-  "adcs": 0,
-  "cans": 2,
-  "power_mgmt": 1,
-  "clock_mgmt": 1,
-  "qei": 0,
-  "internal_osc": 0,
-  "security_features": 1,
-  "output_compare": 8,
-  "input_capture": 0,
-  "qspi": 1,
-  "ethernet": 1,
-  "emif": 1,
-  "spi_slave": 1,
-  "ext_interrupts": 16
-}
-
+    "id": 113,
+    "company_id": 13,
+    "name": "ZYNQ-7035",
+    "core": "Dual-core ARM Cortex-A9 + FPGA (Artix-7 class)",
+    "core_mark": 7500,
+    "dsp_core": 1,
+    "fpu": 1,
+    "max_clock_mhz": 1000,
+    "flash_kb": 0,
+    "sram_kb": 512,
+    "eeprom": 0,
+    "gpios": 54,
+    "uarts": 2,
+    "spis": 2,
+    "i2cs": 2,
+    "pwms": 0,
+    "timers": 4,
+    "dacs": 0,
+    "adcs": 0,
+    "cans": 2,
+    "power_mgmt": 1,
+    "clock_mgmt": 1,
+    "qei": 0,
+    "internal_osc": 0,
+    "security_features": 1,
+    "output_compare": 8,
+    "input_capture": 0,
+    "qspi": 1,
+    "ethernet": 1,
+    "emif": 1,
+    "spi_slave": 1,
+    "ext_interrupts": 16
+  }
 ]
-
